Add integration and unit tests for various services, enhancing test coverage and validation logic